<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#067715"
    android:focusable="true"
    android:foregroundTint="@color/vektor"
    tools:context=".MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_calc_fertig"
            android:layout_width="155dp"
            android:layout_height="72dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="64dp"
            android:background="@color/brackground2"
            android:paddingTop="10dp"
            android:text="@string/notstarted"
            android:textAlignment="center"
            android:textColor="@color/Schriftfarbe"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_uploader_fertig" />

        <TextView
            android:id="@+id/tv_uploader_fertig"
            android:layout_width="164dp"
            android:layout_height="111dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="64dp"
            android:background="@color/brackground2"
            android:paddingTop="10dp"
            android:text="@string/notstarted"
            android:textAlignment="center"
            android:textColor="@color/Schriftfarbe"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_anzeige_oben" />

        <Button
            android:id="@+id/btn_auswertung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="32dp"
            android:background="@color/vektor"
            android:backgroundTint="@color/vektor"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/open_evaluation"
            android:textColor="@color/Schriftfarbe"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_calc" />

        <TextView
            android:id="@+id/tv_anzeige_oben"
            android:layout_width="173dp"
            android:layout_height="143dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="48dp"
            android:background="@color/brackground2"
            android:paddingTop="10dp"
            android:text="@string/notstarted"
            android:textAlignment="center"
            android:textColor="@color/Schriftfarbe"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btn_upload"
            android:layout_width="104dp"
            android:layout_height="108dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="84dp"
            android:contentDescription="upload"
            android:src="@drawable/ic_baseline_cloud_upload_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_search" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:focusable="auto"
            android:src="@drawable/ic_baseline_settings_25"
            app:backgroundTint="@color/vektor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:rippleColor="#FFFFFF" />

        <ImageView
            android:id="@+id/btn_search"
            android:layout_width="116dp"
            android:layout_height="83dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="28dp"
            android:contentDescription="search"
            android:src="@drawable/ic_baseline_search_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btn_calc"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="88dp"
            android:contentDescription="run"
            android:src="@drawable/ic_baseline_directions_run_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_upload" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="76dp"
            android:progressDrawable="@color/vektor"
            android:progressTint="@color/vektor"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@+id/tv_uploader_fertig"
            app:layout_constraintTop_toBottomOf="@+id/tv_anzeige_oben" />

        <TextView
            android:id="@+id/tv_hateam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginBottom="14dp"
            android:text="@string/dev"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>